Swagger routes added
